--- a/app/app.html
+++ b/app/app.html
@@ -4,6 +4,7 @@
   <title>Elaio</title>
   <meta name="description" content="La plataforma que buscabas para organizar tus cursos a distancia">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base ng-app="app">
   <base href="/">
 </head>
 <body>
