--- a/app/modules/dashboard/dashboard.html
+++ b/app/modules/dashboard/dashboard.html
@@ -1,17 +1,2 @@
-<!DOCTYPE html>
-<html class="no-js">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Elaio - Dashboard</title>
-    <meta name="description" content="La plataforma que buscabas para organizar tus cursos a distancia">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="dashboard.css">
-</head>
-<body>
-
-  <script src="../bower_components/jquery/dist/jquery.js"></script>
-  <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
-</body>
-</html>
+<h1>Dashboard</h1>
+<footer-menu></footer-menu>
