--- a/app/modules/landing/landing.html
+++ b/app/modules/landing/landing.html
@@ -12,7 +12,7 @@
         </div>
         <form action="/login" method="post" class="navbar-form navbar-right" role="login">
             <div class="form-group">
-                <input type="text" class="form-control" name="username" placeholder="Usuario">
+                <input type="text" class="form-control" name="email" placeholder="Usuario">
             </div>
             <div class="form-group">
                 <input type="password" class="form-control" name="password" placeholder="Contraseña">
