--- a/app/modules/landing/landing.html
+++ b/app/modules/landing/landing.html
@@ -70,7 +70,7 @@
             </article>
             <aside class="col-lg-5 col-lg-offset-2 col-sm-6">
                 <div class="landing-logo-image">
-                    <span class="glyphicon glyphicon-search img-responsive" aria-hidden="true"></span>
+                    <i class="fa fa-search img-responsive"></i>
                 </div>                
             </aside>
         </section>
@@ -88,7 +88,7 @@
             </article>
             <aside class="col-lg-5 col-sm-pull-6  col-sm-6">
                 <div class="landing-logo-image">
-                    <span class="glyphicon glyphicon-education img-responsive" aria-hidden="true"></span>
+                    <i class="fa fa-graduation-cap img-responsive"></i>
                 </div>                
             </aside>
         </section>
@@ -105,7 +105,7 @@
             </article>
             <aside class="col-lg-5 col-lg-offset-2 col-sm-6">
                 <div class="landing-logo-image">
-                    <span class="glyphicon glyphicon-book img-responsive" aria-hidden="true"></span>
+                    <i class="fa fa-book img-responsive"></i>
                 </div>
             </aside>
         </section>
