--- a/app/index.html
+++ b/app/index.html
@@ -6,13 +6,14 @@
   <title>Elaio</title>
   <meta name="description" content="La plataforma que buscabas para organizar tus cursos a distancia">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <link rel="stylesheet" type="text/css" href="elaio.css">
+  <link rel="stylesheet" type="text/css" href="/styles.css">
+  <link rel="stylesheet" type="text/css" href="/elaio.css">
+  <link rel="icon" type="image/png" href="assets/images/elaio.png" />
   <base href="/">
 </head>
 <body ng-app="app">
     <ui-view></ui-view>
 </body>
-<script type="text/javascript" src="scripts.js"></script>
-<script type="text/javascript" src="elaio.js"></script>
+<script type="text/javascript" src="/scripts.js"></script>
+<script type="text/javascript" src="/elaio.js"></script>
 </html>
