sidebar removed from dashboard to a directive, ui-bootstrap included

--- a/app/modules/dashboard/main/main.html
+++ b/app/modules/dashboard/main/main.html
@@ -1,10 +1,28 @@
-<div id="page-content-wrapper">     
-    <div class="container-fluid">
-	    <div class="row">
-	        <div class="col-lg-12">
-	            <span><button class="btn btn-default" ng-click="dashboard.toggleSidebar()" id="menu-toggle"><i class="fa fa-bars"></i></button> <h1>Timeline</h1></span> 
-	            <p>Actividad reciente</p>
-	        </div>
-	    </div>
-	</div>
-</div>
+<section id="page-content-wrapper">     
+    <section class="container-fluid">
+	    <section class="row">
+	        <section class="col-lg-12">
+	            <button class="btn btn-default" ng-click="dashboard.toggleSidebar()" id="menu-toggle"><i class="fa fa-bars"></i></button>  <span class="page--title">Actividad</span>
+	        </section>
+	    </section>
+	   	<hr class="separator--primary">
+	   	<section class="row">
+	   		<aside class="col-lg-8">
+	   			<article class="row">
+	   				<section class="col-lg-12">
+	   					<h4>Reciente</h4>
+	   					<hr>
+	   				</section>
+	   				<section class="col-lg-12">
+	   					<h4>Últimos cursos añadidos</h4>
+	   					<hr>
+	   				</section>
+	   			</article>
+	   		</aside>
+	   		<aside class="col-lg-4">
+	   			<h4>Contactos</h4>
+	   			<hr>
+	   		</aside>
+	   	</section>
+	</section>
+</section>
