--- a/app/modules/dashboard/profile/profile.html
+++ b/app/modules/dashboard/profile/profile.html
@@ -1,27 +1,32 @@
-<div id="page-content-wrapper">     
-    <div class="container-fluid">
-	    <div class="row">
-	        <div class="col-lg-12">
-	        <span><button class="btn btn-default" ng-click="dashboard.toggleSidebar()" id="menu-toggle"><i class="fa fa-bars"></i></button></span>  <h1>Perfil</h1>
-	        <h3>Actualizar perfil de usuario</h3>
-	        <form role="form">
-            <div class="col-lg-6">
-                <div class="form-group">
-                    <input type="text" class="form-control" name="username" id="username" placeholder="Nombre de usuario" required>
-                </div>
-                <div class="form-group">
-                    <input type="email" class="form-control" id="email" name="InputEmail" placeholder="email" required>
-                </div>
-                <div class="form-group">
-                    <input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="Contraseña actual" required>
-                </div>
-                <div class="form-group">
-                    <input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="Nueva contraseña" required>
-                </div>
-                <input type="submit" name="submit" id="submit" value="Actualizar" class="btn btn-info pull-right">
-            </div>
-        </form>
-	        </div>
-	    </div>
-	</div>
-</div>
+<section id="page-content-wrapper">     
+    <section class="container-fluid">
+	    <section class="row">
+	        <section class="col-lg-12">
+	        <span><button class="btn btn-default" ng-click="dashboard.toggleSidebar()" id="menu-toggle"><i class="fa fa-bars"></i></button></span>  <span class="page--title">Perfil</span>
+	        </section>
+	    </section>
+	    <hr class="separator--primary">
+	    <section class="row">
+	    	<section class="col-lg-12">
+		        <form role="form">
+		            <section class="col-lg-6">
+		                <div class="form-group">
+		                    <input type="text" class="form-control" name="username" id="username" placeholder="Nombre de usuario" required>
+		                </div>
+		                <div class="form-group">
+		                    <input type="email" class="form-control" id="email" name="InputEmail" placeholder="email" required>
+		                </div>
+		                <div class="form-group">
+		                    <input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="Contraseña actual" required>
+		                </div>
+		                <div class="form-group">
+		                    <input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="Nueva contraseña" required>
+		                </div>
+		                <input type="submit" name="submit" id="submit" value="Actualizar" class="btn btn-info pull-right">
+		            </section>
+	        	</form>
+	        </section>
+	    </section>
+	    <hr>
+	</section>
+</section>
