--- a/app/modules/dashboard/dashboard.html
+++ b/app/modules/dashboard/dashboard.html
@@ -1,5 +1,5 @@
-<section id="wrapper" ng-app="app.dashboard">
+<section id="wrapper" class="main--view" ng-app="app.dashboard">
 	<sidebar main="dashboard" title="Elaio" links="dashboard.links" target="wrapper" toggle="menu-toggle"></sidebar>
-    <ui-view></ui-view>
+    <ui-view class="main--view"></ui-view>
     <footer-menu></footer-menu>
 </section>
