--- a/app/modules/dashboard/main/main.html
+++ b/app/modules/dashboard/main/main.html
@@ -2,7 +2,7 @@
     <section class="container-fluid">
 	    <section class="row">
 	        <section class="col-lg-12">
-	            <button class="btn btn-default" ng-click="dashboard.toggleSidebar()" id="menu-toggle"><i class="fa fa-bars"></i></button>  <span class="page--title">Actividad</span>
+	            <button class="btn btn-default" ng-click="dashboard.toggleSidebar()" id="menu-toggle"><i class="fa fa-bars"></i></button>  <span class="page--title">Elaio Dashboard</span>
 	        </section>
 	    </section>
 	   	<hr class="separator--primary">
@@ -10,17 +10,17 @@
 	   		<aside class="col-lg-8">
 	   			<article class="row">
 	   				<section class="col-lg-12">
-	   					<h4>Reciente</h4>
+	   					<h4>Last Activity</h4>
 	   					<hr>
 	   				</section>
 	   				<section class="col-lg-12">
-	   					<h4>Últimos cursos añadidos</h4>
+	   					<h4>Students</h4>
 	   					<hr>
 	   				</section>
 	   			</article>
 	   		</aside>
 	   		<aside class="col-lg-4">
-	   			<h4>Contactos</h4>
+	   			<h4>Notes</h4>
 	   			<hr>
 	   		</aside>
 	   	</section>
