--- a/app/modules/dashboard/profile/profile.html
+++ b/app/modules/dashboard/profile/profile.html
@@ -2,7 +2,7 @@
     <section class="container-fluid">
 	    <section class="row">
 	        <section class="col-lg-12">
-	        <span><button class="btn btn-default" ng-click="dashboard.toggleSidebar()" id="menu-toggle"><i class="fa fa-bars"></i></button></span>  <span class="page--title">Perfil</span>
+	        <span><button class="btn btn-default" ng-click="dashboard.toggleSidebar()" id="menu-toggle"><i class="fa fa-bars"></i></button></span>  <span class="page--title">Profile</span>
 	        </section>
 	    </section>
 	    <hr class="separator--primary">
@@ -11,18 +11,18 @@
 		        <form role="form">
 		            <section class="col-lg-6">
 		                <div class="form-group">
-		                    <input type="text" class="form-control" name="username" id="username" placeholder="Nombre de usuario" required>
+		                    <input type="text" class="form-control" name="username" id="username" placeholder="Name" required>
 		                </div>
 		                <div class="form-group">
-		                    <input type="email" class="form-control" id="email" name="InputEmail" placeholder="email" required>
+		                    <input type="email" class="form-control" id="email" name="InputEmail" placeholder="Email" required>
 		                </div>
 		                <div class="form-group">
-		                    <input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="Contraseña actual" required>
+		                    <input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="Current Password" required>
 		                </div>
 		                <div class="form-group">
-		                    <input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="Nueva contraseña" required>
+		                    <input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="New Password" required>
 		                </div>
-		                <input type="submit" name="submit" id="submit" value="Actualizar" class="btn btn-info pull-right">
+		                <input type="submit" name="submit" id="submit" value="Update" class="btn btn-info pull-right">
 		            </section>
 	        	</form>
 	        </section>
