--- a/app/modules/dashboard/statements/statements.html
+++ b/app/modules/dashboard/statements/statements.html
@@ -1,4 +1,4 @@
-<section id="page-content-wrapper">   
+<section id="page-content-wrapper">
     <section class="container-fluid">
 	    <section class="row">
 	        <section class="col-lg-12">
@@ -11,14 +11,14 @@
 				<section class="row">
 				    <div class="col-md-6">
 				    <!-- TODO: Upload Statements -->
-    				<input type="file" uploadfile="statementsFile(fileContent)"/>
+    				<input type="file" upload-file="fileContent"/>
     				<button ng-click="statements.uploadFile()">Save Statements</button>
 				    <!-- TODO: Statement Form -->
 				   	</div>
 			    </section>
 	        </section>
 	        <section class="col-lg-12">
-	        	<section>{{statements.content}}</section>
+	        	<section>{{statements.statementsFileContent}}</section>
 	        </section>
 	    </section>
 	</section>
