--- a/app/modules/dashboard/statements/statements.html
+++ b/app/modules/dashboard/statements/statements.html
@@ -7,19 +7,18 @@
 	    </section>
 	    <hr class="separator--primary">
 	   	<section class="row">
-	        <section class="col-lg-12">
-				<section class="row">
+	      <section class="col-lg-12">
+				  <section class="row">
 				    <div class="col-md-6">
-				    <!-- TODO: Upload Statements -->
-    				<input type="file" upload-file="fileContent"/>
-    				<button ng-click="statements.uploadFile()">Save Statements</button>
-				    <!-- TODO: Statement Form -->
-				   	</div>
+              <input type="file" name="file" id="file" class="inputfile" upload-file="fileContent"/>
+              <label for="file" class="btn btn-primary">Choose a file</label>
+    				  <button ng-click="statements.uploadFile()" class="btn btn-primary">Save Statements</button>
+				    </div>
 			    </section>
-	        </section>
-	        <section class="col-lg-12">
-	        	<section>{{statements.statementsFileContent}}</section>
-	        </section>
+	      </section>
+	      <section class="col-lg-12">
+	        <pre>{{statements.fileContent}}</pre>
+	      </section>
 	    </section>
 	</section>
 </section>
